--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <h2>Hello World!</h2>
+    <h4>DevOps</h4>
     <h3>Let's rock it!</h3>
     <h4>HTML/CSS</h4>
     <h4>JabaScript</h4>
+    <h4>SDET</h4>
+    <h4>UX/UI</h4>
   </body>
 </html>
